--- a/dancefloor.html
+++ b/dancefloor.html
@@ -12,12 +12,12 @@
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
-      
-      <div id = 'micheal'>
-      <a href="#" class="addDancerButton" id="newBlinkyDancer" data-dancer-maker-function-name="newBlinkyDancer">new blinky dancer</a>    </div></div>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="secondNewBlinkyDancer">second new blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    
+      <a href="#" class="addDancerButton" id="newBlinkyDancer" data-dancer-maker-function-name="newBlinkyDancer">new blinky dancer</a>    
+      <a href="#" class="addDancerButton" id="secondBlinkyDancer" data-dancer-maker-function-name="secondNewBlinkyDancer">second new blinky dancer</a>s    
+      <a href='#' class='lineUpDancersButton'>line up dancers</a>
 
+    
 
     <script src="src/init.js"></script>
   </body>
